feat: Se agrega documentacion javadoc